
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_project" #TODO: Set project name
version = "0.0.1"
#TODO: Set authors
authors = [
    { name="Ethan Coker", email="elc0055@auburn.edu" }
]
#TODO: Short Description
description = "A Python package for calculating forces exerted on cells in 2D channels"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
#TODO: List dependencies: These will be installed when installing the project
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'scikit-learn',
    'tqdm',
    'pyyaml',
    'pytest'
]